# SECRET-PROJECT

./: .gitignore  AddressSanitizer.txt  CMakeLists.txt  README.md  build.bat  build.sh
cmake/launcher-templates/: genericlauncher.cmd.in  launcher.env.cmd.in  targetlauncher.cmd.in  targetlauncher.sh.in
data/shaders/: DefaultSprite.frag  DefaultSprite.vert
include/: stdafx.h  types.h  types.hpp
include/graphics/: Clipping.hpp  Font.h  GLSLProgram.h  Gradients.hpp  SpriteBatcher.h  StringDrawers.inl  TextAlign.h  TextAlign.hpp  WordWrap.hpp
include/io/: DirectorySearcher.h  FileLoader.h  ImageIO.h  Printer.h  Printer.hpp
src/: main.cpp
src/graphics/: Font.cpp  GLSLProgram.cpp  SpriteBatcher.cpp  TextAlign.cpp
src/io/: DirectorySearcher.cpp  FileLoader.cpp  ImageIO.cpp
